# duckstation

./: CMakeLists.txt  README.md  duckstation.sln
.github/workflows/: rolling-release.yml
android/app/src/main/java/com/github/stenzek/duckstation/: AndroidHostInterface.java
dep/: CMakeLists.txt
src/: CMakeLists.txt
src/common/: CMakeLists.txt  window_info.h
src/core/: CMakeLists.txt
src/duckstation-libretro/: libretro_host_display.cpp  libretro_host_display.h  libretro_host_interface.cpp
src/frontend-common/: CMakeLists.txt  d3d11_host_display.cpp  game_settings.cpp  game_settings.h  opengl_host_display.cpp  vulkan_host_display.cpp
